refactor: transition controllers to constructor injection and implement comprehensive service-layer testing and database schema updates